Changelog
=========

3.0 (unreleased)
----------------

- Removed development LDAP configuration for now.
  [lgraf]

- Fix import of HAVE_BLOBS from plone.namedfile.
  [lgraf]

- Repository Setup: Moved config and blueprints from zugpolicy.base in to core.
  [phgross]

- Dossier: Fixed start- and end-date validation in edit forms.
  [phgross]

- AdvancedSearch: Added special description for the portal types field
  in a multiclientsetup.
  [phgross]

- Added filter_pattern option to LDAPSource blueprint.
  If set, only imports users whose email address match `filter_pattern`.
  [lgraf]

- Rebuild OpengeverContentListing registration.
  Use additional interface instead of overrides.zcml
  [phgross]

- Added bin/build-translations script to opengever.core buildout.
  [lgraf]

- Lay out date range fields in advanced search form side by side.
  Note: This requires the "Init og.advancedsearch profile version" upgrade
  step from opengever.base to be run first!
  [lgraf]

- Removed description texts for advanced search dossier date range fields.
  This is being done in order to avoid layouting issues.

- Extract attachments: Set digitially_available allways to true.
  [phgross]